metadata/force-app/main/default/objects/RFP__c/RFP__c.object-meta.xml
<CustomObject>
    <label>RFP</label>
    <nameField>
        <displayFormat>RFP-{00000}</displayFormat>
        <label>RFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>