metadata/force-app/main/default/objects/RFP__c/fields/Account_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile_Link__c</fullName>
    <label>Account Profile Link</label>
    <type>Url</type>
</CustomField>