metadata/force-app/main/default/objects/RFP__c/fields/Additional_Commercial_Support_Reason__c.field-meta.xml
<CustomField>
    <fullName>Additional_Commercial_Support_Reason__c</fullName>
    <inlineHelpText>Specify language requirements, original Account Executive, region, or any RFP details differing from the account team</inlineHelpText>
    <label>Additional Commercial Support Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>