metadata/force-app/main/default/objects/RFP__c/fields/Current_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_State__c</fullName>
    <label>Current Account State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>