metadata/force-app/main/default/objects/RFP__c/fields/Deal_Context_Key_Themes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Context_Key_Themes__c</fullName>
    <inlineHelpText>Messages the prospect or customer cares about, relevant details of the RFP</inlineHelpText>
    <label>Deal Context &amp; Key Themes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>