metadata/force-app/main/default/objects/RFP__c/fields/Internal_Review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_Due_Date__c</fullName>
    <inlineHelpText>2 weeks prior to RFP due date</inlineHelpText>
    <label>Internal Review Due Date</label>
    <type>Date</type>
</CustomField>