metadata/force-app/main/default/objects/RFP__c/fields/RFP_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>RFP_Folder_Link__c</fullName>
    <label>RFP Folder Link</label>
    <type>Url</type>
</CustomField>