metadata/force-app/main/default/objects/RFP__c/fields/What_Prompted_the_RFP__c.field-meta.xml
<CustomField>
    <fullName>What_Prompted_the_RFP__c</fullName>
    <label>What prompted the RFP?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>