metadata/force-app/main/default/objects/RFP__c/validationRules/Internal_Review_2_Weeks_Before_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Review_2_Weeks_Before_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNULL( Internal_Review_Due_Date__c ))
&amp;&amp; NOT( ISNULL( RFP_Due_Date__c ) )
&amp;&amp; Internal_Review_Due_Date__c &gt; RFP_Due_Date__c - 14</errorConditionFormula>
    <errorDisplayField>Internal_Review_Due_Date__c</errorDisplayField>
    <errorMessage>Internal Review Date should be 2 weeks prior to RFP Due Date</errorMessage>
</ValidationRule>